# tp1-cpp

constexpr-conway/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  conway  main.cpp  readme.md
constexpr-conway/include/: conway.hpp
template-rule-110/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main.cpp  rule-110
template-rule-110/include/: rule-110.hpp
